change multiarch version tag

--- a/.github/workflows/build-php.yml
+++ b/.github/workflows/build-php.yml
@@ -22,9 +22,9 @@ jobs:
           cd docker/
           if [[ "${{ matrix.arch }}" != "x86_64" ]]; then
             if [[ "${{ matrix.arch }}" = "armv7l" ]]; then
-              sed -ie 's/alpine:latest/multiarch\/alpine:armv7-v3.14/g' Dockerfile
+              sed -ie 's/alpine:latest/multiarch\/alpine:armv7-latest-stable/g' Dockerfile
             else
-              sed -ie 's/alpine:latest/multiarch\/alpine:${{ matrix.arch }}-v3.14/g' Dockerfile
+              sed -ie 's/alpine:latest/multiarch\/alpine:${{ matrix.arch }}-latest-stable/g' Dockerfile
             fi
             docker run --rm --privileged multiarch/qemu-user-static:register --reset
           fi
