--- a/.github/workflows/build-php.yml
+++ b/.github/workflows/build-php.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-versions: [ "7.2.34", "7.3.33", "7.4.30", "8.0.23", "8.1.10" ]
+        php-versions: [ "7.2.34", "7.3.33", "7.4.30", "8.0.23", "8.1.10", "8.2.0" ]
         arch: [ "x86_64", "aarch64", "armv7l" ]
     steps:
       - uses: actions/checkout@v2
