拆分构建流程；添加swow 扩展

--- a/.github/workflows/build-php.yml
+++ b/.github/workflows/build-php.yml
@@ -2,7 +2,7 @@ name: Build PHP
 
 on:
   push:
-    branches: [ master ]
+    branches: [ release ]
     paths:
       - ".github/workflows/**.yml"
       - "docker/**"
