继续完善构建步骤拆分

--- a/.github/workflows/build-php.yml
+++ b/.github/workflows/build-php.yml
@@ -2,7 +2,7 @@ name: Build PHP
 
 on:
   push:
-    branches: [ release ]
+    branches: [ build ]
     paths:
       - ".github/workflows/**.yml"
       - "docker/**"
