--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,9 @@ name: CI
 
 on: [push]
 
+env:
+  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 jobs:
 #  linux:
 #    runs-on: ubuntu-latest
@@ -23,7 +26,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - run: brew install make bison flex automake unzip gzip bzip2
+      - run: brew install automake gzip
       - run: composer update
       - run: ./bin/spc fetch --with-php=${{ matrix.php_version }} --all --debug
       - run: ./bin/spc build openssl,redis,ftp,curl,mbstring,pcntl,session,pdo,sqlite3,pdo_sqlite,tokenizer,filter,fileinfo,dom,xml,simplexml,bcmath --debug
