--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,13 @@ on:
     inputs:
       version:
         required: true
-        type: number
+        default: '8.2'
+        type: choice
+        options:
+          - '8.2'
+          - '8.1'
+          - '8.0'
       extensions:
-        required: true
         type: string
 
 env:
@@ -47,14 +51,14 @@ jobs:
         uses: actions/cache@v3
         with:
           path: source
-          key: php-${{ inputs.php_version }}-dependencies
+          key: php-${{ inputs.version }}-dependencies
       - if: steps.cache-build-deps.outputs.cache-hit != 'true'
-        run: ./bin/spc fetch --with-php=${{ inputs.php_version }} --all
-#      - run: ./bin/spc fetch --with-php=${{ inputs.php_version }} --all --debug
+        run: ./bin/spc fetch --with-php=${{ inputs.version }} --all
+#      - run: ./bin/spc fetch --with-php=${{ inputs.version }} --all --debug
       
       - run: ./bin/spc build ${{ inputs.extensions }}
       
       - uses: actions/upload-artifact@v3
         with:
-          name: php-${{ inputs.php_version }}
+          name: php-${{ inputs.version }}
           path: buildroot/bin/php
