--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ on:
           - '8.0'
       extensions:
         type: string
+      debug:
+        type: boolean
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -52,11 +54,16 @@ jobs:
         with:
           path: source
           key: php-${{ inputs.version }}-dependencies
-      - if: steps.cache-build-deps.outputs.cache-hit != 'true'
+      - if: ${{ steps.cache-build-deps.outputs.cache-hit != 'true' && inputs.debug == 'true' }}
+        run: ./bin/spc fetch --with-php=${{ inputs.version }} --all --debug
+      - if: ${{ steps.cache-build-deps.outputs.cache-hit != 'true' && inputs.debug != 'true' }}
         run: ./bin/spc fetch --with-php=${{ inputs.version }} --all
-#      - run: ./bin/spc fetch --with-php=${{ inputs.version }} --all --debug
+
       
-      - run: ./bin/spc build ${{ inputs.extensions }}
+      - if: inputs.debug == 'true'
+        run: ./bin/spc build ${{ inputs.extensions }} --debug
+      - if: inputs.debug != 'true'
+        run: ./bin/spc build ${{ inputs.extensions }}
       
       - uses: actions/upload-artifact@v3
         with:
