--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,6 @@ jobs:
           key: composer-dependencies
       - if: steps.cache-composer-deps.outputs.cache-hit != 'true'
         run: composer update
-#      - run: composer update
       
       - id: cache-build-deps
         uses: actions/cache@v3
@@ -55,9 +54,9 @@ jobs:
           path: source
           key: php-${{ inputs.version }}-dependencies
       - if: ${{ steps.cache-build-deps.outputs.cache-hit != 'true' && inputs.debug == 'true' }}
-        run: ./bin/spc fetch --with-php=${{ inputs.version }} --all --debug
+        run: ./bin/spc fetch --with-php=${{ inputs.version }} --with-openssl11 --debug ${{ inputs.extensions }}
       - if: ${{ steps.cache-build-deps.outputs.cache-hit != 'true' && inputs.debug != 'true' }}
-        run: ./bin/spc fetch --with-php=${{ inputs.version }} --all
+        run: ./bin/spc fetch --with-php=${{ inputs.version }} ${{ inputs.extensions }}
 
       
       - if: inputs.debug == 'true'
