--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
+      # Install some missing packages
       - run: brew install automake gzip
       
       - id: cache-composer-deps
@@ -45,6 +46,8 @@ jobs:
         with:
           path: vendor
           key: composer-dependencies
+      
+      # If there's no Composer cache, install dependencies
       - if: steps.cache-composer-deps.outputs.cache-hit != 'true'
         run: composer update
       
@@ -53,15 +56,19 @@ jobs:
         with:
           path: source
           key: php-${{ inputs.version }}-dependencies
-      - if: ${{ steps.cache-build-deps.outputs.cache-hit != 'true' && inputs.debug == 'true' }}
+          
+      # If there's no dependencies cache, fetch sources, with or without debug
+      - if: ${{ steps.cache-build-deps.outputs.cache-hit != 'true' && inputs.debug == true }}
         run: ./bin/spc fetch --with-php=${{ inputs.version }} --with-openssl11 --all --debug
-      - if: ${{ steps.cache-build-deps.outputs.cache-hit != 'true' && inputs.debug != 'true' }}
+        
+      - if: ${{ steps.cache-build-deps.outputs.cache-hit != 'true' && inputs.debug == false }}
         run: ./bin/spc fetch --with-php=${{ inputs.version }} --all
 
-      
-      - if: inputs.debug == 'true'
+      # Run the build, with or without debug
+      - if: inputs.debug == true
         run: ./bin/spc build ${{ inputs.extensions }} --debug
-      - if: inputs.debug != 'true'
+
+      - if: inputs.debug == false
         run: ./bin/spc build ${{ inputs.extensions }}
       
       - uses: actions/upload-artifact@v3
