--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ on:
           - '8.2'
           - '8.1'
           - '8.0'
+          - '7.4'
       target:
         required: true
         default: 'cli'
@@ -69,7 +70,7 @@ jobs:
 
       # With or without debug
       - if: inputs.debug == true
-        run: echo "SPC_BUILD_DEBUG='--debug'" >> $GITHUB_ENV
+        run: echo "SPC_BUILD_DEBUG=--debug" >> $GITHUB_ENV
 
       # With target select: cli, micro or both
       - if: ${{ inputs.target == 'micro' || inputs.target == 'all' }}
