--- a/.github/workflows/build-arm.yml
+++ b/.github/workflows/build-arm.yml
@@ -1,15 +1,15 @@
-name: CI on x86_64
+name: CI on arm linux
 
 on:
   workflow_dispatch:
     inputs:
       operating-system:
         required: true
-        description: Compile target OS
+        description: Compile target arch (Linux only)
         type: choice
         options:
-          - ubuntu-latest
-          - macos-latest
+          - aarch64
+          - armv7l
       version:
         required: true
         description: php version to compile
@@ -43,32 +43,9 @@ env:
 jobs:
   build:
     name: build ${{ inputs.version }} on ${{ inputs.operating-system }}
-    runs-on: ${{ inputs.operating-system }}
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
-      # Install macOS missing packages and mark os suffix
-      - if: ${{ inputs.operating-system == 'macos-latest' }}
-        run: |
-          brew install automake gzip
-          echo "SPC_BUILD_OS=macos" >> $GITHUB_ENV
-
-      # Install Ubuntu missing packages and mark os suffix
-      - if: ${{ inputs.operating-system == 'ubuntu-latest' }}
-        run: |
-          sudo apt install musl-tools -y
-          echo "SPC_BUILD_OS=linux" >> $GITHUB_ENV
-
-      # Cache composer dependencies
-      - id: cache-composer-deps
-        uses: actions/cache@v3
-        with:
-          path: vendor
-          key: composer-dependencies
-
-      # If there's no Composer cache, install dependencies
-      - if: steps.cache-composer-deps.outputs.cache-hit != 'true'
-        run: composer update --no-dev
 
       # Cache downloaded source
       - id: cache-download
@@ -90,30 +67,30 @@ jobs:
         run: echo "SPC_BUILD_FPM=--build-fpm" >> $GITHUB_ENV
 
       # If there's no dependencies cache, fetch sources, with or without debug
-      - run: CACHE_API_EXEC=yes ./bin/spc download --with-php=${{ inputs.version }} --all ${{ env.SPC_BUILD_DEBUG }}
+      - run: SPC_USE_ARCH=${{ inputs.operating-system }} ./bin/spc-alpine-docker download --with-php=${{ inputs.version }} --all ${{ env.SPC_BUILD_DEBUG }}
 
       # Run build command
-      - run: ./bin/spc build ${{ inputs.extensions }} ${{ env.SPC_BUILD_DEBUG }} ${{ env.SPC_BUILD_CLI }} ${{ env.SPC_BUILD_MICRO }} ${{ env.SPC_BUILD_FPM }}
+      - run: SPC_USE_ARCH=${{ inputs.operating-system }} ./bin/spc-alpine-docker build ${{ inputs.extensions }} ${{ env.SPC_BUILD_DEBUG }} ${{ env.SPC_BUILD_CLI }} ${{ env.SPC_BUILD_MICRO }} ${{ env.SPC_BUILD_FPM }}
 
       # Upload cli executable
       - if: ${{ inputs.build-cli == true }}
         uses: actions/upload-artifact@v3
         with:
-          name: php-${{ inputs.version }}-${{ env.SPC_BUILD_OS }}
+          name: php-${{ inputs.version }}-linux-${{ inputs.operating-system }}
           path: buildroot/bin/php
 
       # Upload micro self-extracted executable
       - if: ${{ inputs.build-micro == true }}
         uses: actions/upload-artifact@v3
         with:
-          name: micro-${{ inputs.version }}-${{ env.SPC_BUILD_OS }}
+          name: micro-${{ inputs.version }}-linux-${{ inputs.operating-system }}
           path: buildroot/bin/micro.sfx
 
       # Upload fpm executable
       - if: ${{ inputs.build-fpm == true }}
         uses: actions/upload-artifact@v3
         with:
-          name: php-fpm-${{ inputs.version }}-${{ env.SPC_BUILD_OS }}
+          name: php-fpm-${{ inputs.version }}-linux-${{ inputs.operating-system }}
           path: buildroot/bin/php-fpm
 
       # Upload extensions metadata
