--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "symfony/console": "^6 || ^5 || ^4",
         "zhamao/logger": "^1.0",
         "crazywhalecc/cli-helper": "^0.1.0",
-        "nunomaduro/collision": "*"
+        "nunomaduro/collision": "*",
+        "ext-pcntl": "*"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.2 != 3.7.0",
