--- a/.github/workflows/build-linux-x86_64.yml
+++ b/.github/workflows/build-linux-x86_64.yml
@@ -1,15 +1,8 @@
-name: CI on x86_64
+name: CI on x86_64 linux
 
 on:
   workflow_dispatch:
     inputs:
-      operating-system:
-        required: true
-        description: Compile target OS
-        type: choice
-        options:
-          - ubuntu-latest
-          - macos-latest
       version:
         required: true
         description: php version to compile
@@ -42,20 +35,13 @@ env:
 
 jobs:
   build:
-    name: build ${{ inputs.version }} on ${{ inputs.operating-system }}
-    runs-on: ${{ inputs.operating-system }}
+    name: build ${{ inputs.version }} on Linux x86_64
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
-      # Install macOS missing packages and mark os suffix
-      - if: ${{ inputs.operating-system == 'macos-latest' }}
-        run: |
-          brew install automake gzip
-          echo "SPC_BUILD_OS=macos" >> $GITHUB_ENV
-
       # Install Ubuntu missing packages and mark os suffix
-      - if: ${{ inputs.operating-system == 'ubuntu-latest' }}
-        run: |
+      - run: |
           sudo apt install musl-tools -y
           echo "SPC_BUILD_OS=linux" >> $GITHUB_ENV
 
