add upload download artifacts

--- a/.github/workflows/build-linux-x86_64.yml
+++ b/.github/workflows/build-linux-x86_64.yml
@@ -114,3 +114,9 @@ jobs:
           path: |
             buildroot/build-extensions.json
             buildroot/build-libraries.json
+
+      # Upload downloaded files
+      - uses: actions/upload-artifact@v3
+        with:
+          name: download-files
+          path: downloads/
